main: improving the search code